syntax = "proto3";
option go_package = "./;proto";

service Message{
    rpc MessageList(MessageRequest) returns(MessageListResponse); //批量获取留言信息
    rpc CreateMessage(MessageRequest) returns(MessageResponse); //添加留言
}

message MessageRequest{
    int32 id = 1;
    uint32 userId = 2;
    int32 messageType = 3;
    string subject = 4;
    string message = 5;
    string file = 6;
    int32 pages = 7;
    int32 pagePerNums = 8;
}

message  MessageResponse{
    uint32 id = 1;
    uint32 userId = 2;
    int32 messageType = 3;
    string subject = 4;
    string message = 5;
    string file = 6;
    uint32 addTime=7;
}

message MessageListResponse {
    int32 total = 1;
    repeated MessageResponse data = 2;
}
